Pushing red theme changes

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -9943,6 +9943,14 @@ a.text-primary {
 	color: var(--g-main) !important;
 }
 
+a.text-primary-announcemnt {
+	color: white !important;
+}
+
+a.text-primary-announcemnt:hover {
+	color: #fd6c6c !important;
+}
+
 a.text-primary:hover, a.text-primary:focus, a.text-primary:active {
 	color: var(--g-main-2) !important;
 }
