--- a/sections/header-3.liquid
+++ b/sections/header-3.liquid
@@ -1324,6 +1324,15 @@ input[type=search]::-webkit-search-cancel-button {
   border-bottom: 1px solid rgba(121,121,121,.1);
   color:var(--header-text-top);
 }
+
+.announcement_link {
+  color: black;
+
+}
+{% comment %} .announcement_link:hover {
+  color: #e49595; 
+} {% endcomment %}
+
 .header-top .header-head a{
   color:var(--header-text-top); 
 }
