--- a/snippets/site-logo.liquid
+++ b/snippets/site-logo.liquid
@@ -19,7 +19,12 @@
     </a>
     {%- else -%}
     {%- assign shop_name_length = shop.name.size -%}
-    <a href="/" itemprop="url" {% if shop_name_length > 10 %} class="site-header__shop-name--small"{% endif %}>{{ shop.name }}</a>
+    {% comment %} <a href="/" itemprop="url" {% if shop_name_length > 10 %} class="site-header__shop-name--small"{% endif %}>{{ shop.name }}</a> {% endcomment %}
+    <a href="/" itemprop="url" class="site-header__logo-link">
+      <img height="2000%" width="2000%" class="logo-dark" src="{{ "TheOrigamiWay-logo-light.png" | asset_url  }}"
+        srcset="{{ "TheOrigamiWay-logo-light.png" | image_url: image_size  }} 1x, {{ "TheOrigamiWay-logo-light.png" | image_url: image_size, scale: 2 }} 2x"
+        itemprop="logo">
+    </a>
     {%- endif -%}
     {%- if template.name != 'index' -%}
   </div>
