Submitting change sto include x and tiktok icons

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -9961,7 +9961,7 @@ a.text-primary:hover, a.text-primary:focus, a.text-primary:active {
 
 .site-footer .site-footer__section-title {
 	text-transform: uppercase;
-	margin-bottom: 45px;
+	font-weight: bold
 }
 
 .footer-email .form-control {
