--- a/sections/header-3.liquid
+++ b/sections/header-3.liquid
@@ -1468,7 +1468,7 @@
                         {%- if settings.social_twitter_link != blank -%}
                           <li class="list-inline-item">
                             <a href="{{ settings.social_twitter_link | escape }}" title="{{ 'layout.footer.social_platform' | t: name: shop.name, platform: 'Twitter' }}">
-                              {%- render 'icon-twitter' -%}
+                              {%- render 'icon-x' -%}
                               <span >Tw</span>
                             </a>
                           </li>
