--- a/sections/page-about.liquid
+++ b/sections/page-about.liquid
@@ -132,7 +132,7 @@
             <li><a class="person__social-fb" href="{{section.settings[settingFacebook]}}">{%- include 'icon-facebook' -%}</a></li>
             {%- endif -%}
             {%- if section.settings[settingTwitter] != blank -%}
-            <li><a class="person__social-tw" href="{{section.settings[settingTwitter]}}">{%- include 'icon-twitter' -%}</a></li>
+            <li><a class="person__social-tw" href="{{section.settings[settingTwitter]}}">{%- include 'icon-x' -%}</a></li>
             {%- endif -%}
             {%- if section.settings[settingLinkedin] != blank -%}
             <li><a class="person__social-lk" href="{{section.settings[settingLinkedin]}}">{%- include 'icon-linkedin-in' -%}</a></li>
