--- a/snippets/htmlbuilder-icon.liquid
+++ b/snippets/htmlbuilder-icon.liquid
@@ -78,6 +78,8 @@
   {%- include 'generateIcon' with 'icon-truck' -%}
   {%- include 'generateIcon' with 'icon-tumblr' -%}
   {%- include 'generateIcon' with 'icon-twitter' -%}
+  {%- include 'generateIcon' with 'icon-x' -%}
+  {%- include 'generateIcon' with 'icon-tiktok' -%}
   {%- include 'generateIcon' with 'icon-typography' -%}
   {%- include 'generateIcon' with 'icon-user' -%}
   {%- include 'generateIcon' with 'icon-view' -%}
