Updated the font for the store

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -2475,18 +2475,22 @@ label[for] {
 }
 
 .font-family-1 {
-	font-family: var(--g-font-1) !important;
+	font-family: var(--g-font-4) !important;
 }
 .font-family-2{
-	font-family: var(--g-font-2) !important;
+	font-family: var(--g-font-4) !important;
 }
 
 .font-family-2, .btn-theme, .shopify-payment-button .shopify-payment-button__button--unbranded, .spr-summary-actions-newreview, .rte .btn-theme, .rte .shopify-payment-button .shopify-payment-button__button--unbranded, .shopify-payment-button .rte .shopify-payment-button__button--unbranded, .rte .spr-summary-actions-newreview {
-	font-family: var(--g-font-2);
+	font-family: var(--g-font-4);
 }
 
 .font-family-3 {
-	font-family: var(--g-font-3) !important;
+	font-family: var(--g-font-4) !important;
+}
+
+.font-family-4{
+	font-family: var(--g-font-4) !important;
 }
 
 .fz {
@@ -2819,7 +2823,7 @@ figcaption .bg-des:before {
 	text-transform: uppercase;
 	font-weight: 600;
 	right: 0px;
-	font-family: var(--g-font-2);
+	font-family: var(--g-font-4);
 }
 
 .menu-label > span {
@@ -3091,7 +3095,7 @@ figcaption .bg-des:before {
 
 body, input, textarea, button, select {
 	font-size: var(--g-font-size);
-	font-family: var(--g-font-2);
+	font-family: var(--g-font-4);
 	color: var(--color-body-text);
 	line-height: 1.8;
 	font-weight: var(--g-font-weight-body);
@@ -3109,7 +3113,7 @@ html.rtl {
 /*================ Headings ================*/
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 	color: var(--g-color-heading);
-	font-family: var(--g-font-1);
+	font-family: var(--g-font-4);
 }
 
 h1 a, h2 a, h3 a, h4 a, h5 a, h6 a, .h1 a, .h2 a, .h3 a, .h4 a, .h5 a, .h6 a {
@@ -3123,11 +3127,11 @@ h1:last-child, h2:last-child, h3:last-child, h4:last-child, h5:last-child, h6:la
 }
 
 #topbar {
-	font-family: var(--g-font-2);
+	font-family: var(--g-font-4);
 }
 
 .subtop {
-	font-family: var(--g-font-2);
+	font-family: var(--g-font-4);
 	font-weight: var(--g-font-weight-subtop);
 	font-size: var(--g-font-size-subtop);
 	line-height: 26px;
@@ -3868,7 +3872,7 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
     text-align: center;
     margin-bottom: 0;
     font-size: 14px;
-    font-family: var(--g-font-2);
+    font-family: var(--g-font-4);
 }
 .return-link .icon, .return-link [class^=icon-] {
     fill: currentColor;
@@ -4416,7 +4420,7 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
 }
 
 #nav-tab-info .nav-item {
-	font-family: var(--g-font-2);
+	font-family: var(--g-font-4);
 	font-weight: normal;
 	font-size: 18px;
 	line-height: 23px;
@@ -4674,7 +4678,7 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
 	line-height: 24px;
 	font-size: var(--g-font-size);
 	text-align: center;
-	font-family: var(--g-font-2);
+	font-family: var(--g-font-4);
 }
 
 .product-card__availability {
@@ -4700,7 +4704,7 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
 	margin-top: 3px;
 	font-weight: 400;
 	font-size: var(--g-font-size);
-	font-family: var(--g-font-2);
+	font-family: var(--g-font-4);
 }
 
 .product-card__price > .money {
@@ -4730,7 +4734,7 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
 
 .product-single__price {
 	color: var(--g-main);
-	font-family: var(--g-font-1);
+	font-family: var(--g-font-4);
 	font-weight: 500;
 	font-size: 24px;
 }
@@ -5461,7 +5465,7 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
 	font-size: 24px;
 	display: block;
 	margin-bottom: 20px;
-	font-family: var(--g-font-1);
+	font-family: var(--g-font-4);
 }
 /*================ Product image and thumbnail layout ================*/
 .photos__item--main {
@@ -5636,7 +5640,7 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
 	color: var(--g-label-text);
 	padding: 2px 6px;
 	border-radius: 0px;
-	font-family: var(--g-font-2);
+	font-family: var(--g-font-4);
 	font-weight: 500;
 }
 
@@ -6058,7 +6062,7 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
 	font-size: calc(var(--g-font-size) + 1px);
 	line-height: 23px;
 	font-weight: 500;
-	font-family: var(--g-font-2);
+	font-family: var(--g-font-4);
 }
 
 .collection-sidebar #js-fillter {
@@ -10154,7 +10158,7 @@ a.text-primary:hover, a.text-primary:focus, a.text-primary:active {
 	font-weight: 500;
 	font-size: calc(var(--g-font-size) + 2px);
 	line-height: 23px;
-	font-family: var(--g-font-2);
+	font-family: var(--g-font-4);
 }
 
 .nav-tab-info-vertical .card .card-header i {
