--- a/snippets/header-css.liquid
+++ b/snippets/header-css.liquid
@@ -145,6 +145,7 @@ article,aside,figcaption,figure,footer,header,hgroup,main,nav,section{display:bl
       --g-font-1: {{font_family_1}};
       --g-font-2: {{font_family_2}};
       --g-font-3: {{font_family_3}};
+      --g-font-4: "Exo 2", sans-serif;
       --g-font-size: {{settings.base_size}}px;
       --g-main: {{settings.color_primary}};
       --g-main-2: {{settings.color_secondary}};
