moved description accordion to under the favorites and moved the guuide size next to size, fixed an error related to the favorites button under buy now

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -4789,7 +4789,13 @@ a:hover, .link-accent-color:hover, a:focus, .link-accent-color:focus {
 	font-weight: 600;
 	font-size: calc(var(--g-font-size) - 2px);
 	color: var(--g-color-heading);
+	padding-bottom: 18px;
 }
+
+.card-width {
+	width: 100%;
+}
+
 .product-form .gr-btnjs .js-btn-compare, .product-form .gr-btnjs .js-btn-wishlist{
 	display: flex;
 	align-items: center;
@@ -10159,6 +10165,10 @@ a.text-primary:hover, a.text-primary:focus, a.text-primary:active {
 	font-size: calc(var(--g-font-size) + 2px);
 	line-height: 23px;
 	font-family: var(--g-font-4);
+}
+
+.nav-tab-info-vertical .card .card-header-border-top {
+	border-top: 1px solid #d7d7d7;
 }
 
 .nav-tab-info-vertical .card .card-header i {
