--- a/snippets/product-information-vertical.liquid
+++ b/snippets/product-information-vertical.liquid
@@ -1,7 +1,7 @@
-<div id="accordion" class="nav-tab-info-vertical">
+<div id="accordion" class="nav-tab-info-vertical card-width">
 
     <div class="card">
-      <div class="card-header">
+      <div class="card-header card-header-border-top">
         <a class="card-link" data-toggle="collapse" data-target="#collapseOne" href="#">
             {% include 'icon-arrow-right' %} {{section.settings.gtab_des | default:'Description'}}
         </a>
