--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -67,8 +67,8 @@
     {%- include 'popup-compare' -%}
     {%- include 'header-js' -%}
     {%- if settings.show_multiple_currencies -%}
-    {{ "/services/javascripts/currencies.js" | script_tag }}
+    {{ "/services/javascripts/currencies.js" | stylesheet_tag }}
     {%- endif -%}
-    {{ '//cdn.shopify.com/s/files/1/0194/1736/6592/t/1/assets/booster-page-speed-optimizer.js?23' | script_tag }}
+    {{ '//cdn.shopify.com/s/files/1/0194/1736/6592/t/1/assets/booster-page-speed-optimizer.js?23' | stylesheet_tag }}
   </body>
 </html>
