--- a/snippets/product-grid-5.liquid
+++ b/snippets/product-grid-5.liquid
@@ -19,12 +19,12 @@
         </span>
         {%- endif -%}
       </div>
-      <div  class="product-card__overlay d-flex justify-content-center flex-row product-card__overlaybottom">
+      {% comment %} <div  class="product-card__overlay d-flex justify-content-center flex-row product-card__overlaybottom">
         <span data-tooltip="false" data-placement="left" class="btn btn-theme gradient-theme-vertical product-card__overlay-btn js-btn-quickview" title="{{ 'products.product.quickview_text' | t }}" data-toggle="modal" data-target="#jsQuickview" data-handle="{{product.handle}}">
         <svg aria-hidden="true" focusable="false" data-prefix="fal" data-icon="plus" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" class="svg-inline--fa fa-plus fa-w-12 fa-3x"><path fill="currentColor" d="M376 232H216V72c0-4.42-3.58-8-8-8h-32c-4.42 0-8 3.58-8 8v160H8c-4.42 0-8 3.58-8 8v32c0 4.42 3.58 8 8 8h160v160c0 4.42 3.58 8 8 8h32c4.42 0 8-3.58 8-8V280h160c4.42 0 8-3.58 8-8v-32c0-4.42-3.58-8-8-8z" class=""></path></svg>
           <span>{{ 'products.product.quickview_text' | t }}</span>
           </span>
-      </div>
+      </div> {% endcomment %}
       
   
       {%- if settings.enable_countdown_card -%}{%- include 'product-countdown' -%}{%- endif -%}
