--- a/snippets/productSizeGuide.liquid
+++ b/snippets/productSizeGuide.liquid
@@ -2,8 +2,8 @@
 <!-- productSizeGuide.liquid -->
 {%- assign pageSizeGudie = pages[section.settings.sizeguide_page] -%}
 <a href="javascript:void(0)" data-toggle="modal" data-target="#jsSizeGuide" class="open-sizeguide">
-  <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="ruler-vertical" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512" class="svg-inline--fa fa-ruler-vertical fa-w-8 fa-3x"><path fill="currentColor" d="M168 416c-4.42 0-8-3.58-8-8v-16c0-4.42 3.58-8 8-8h88v-64h-88c-4.42 0-8-3.58-8-8v-16c0-4.42 3.58-8 8-8h88v-64h-88c-4.42 0-8-3.58-8-8v-16c0-4.42 3.58-8 8-8h88v-64h-88c-4.42 0-8-3.58-8-8v-16c0-4.42 3.58-8 8-8h88V32c0-17.67-14.33-32-32-32H32C14.33 0 0 14.33 0 32v448c0 17.67 14.33 32 32 32h192c17.67 0 32-14.33 32-32v-64h-88z" class=""></path></svg>
-  {{section.settings.sizeguide_title | default: 'Size guide'}}
+  {% comment %} <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="ruler-vertical" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 256 512" class="svg-inline--fa fa-ruler-vertical fa-w-8 fa-3x"><path fill="currentColor" d="M168 416c-4.42 0-8-3.58-8-8v-16c0-4.42 3.58-8 8-8h88v-64h-88c-4.42 0-8-3.58-8-8v-16c0-4.42 3.58-8 8-8h88v-64h-88c-4.42 0-8-3.58-8-8v-16c0-4.42 3.58-8 8-8h88v-64h-88c-4.42 0-8-3.58-8-8v-16c0-4.42 3.58-8 8-8h88V32c0-17.67-14.33-32-32-32H32C14.33 0 0 14.33 0 32v448c0 17.67 14.33 32 32 32h192c17.67 0 32-14.33 32-32v-64h-88z" class=""></path></svg> {% endcomment %}
+  {{section.settings.sizeguide_title | default: 'Size Guide'}}
 </a>
 <div class="modal fade" id="jsSizeGuide" role="dialog" aria-hidden="true">
   <div class="modal-dialog modal-dialog--sizeguide modal-dialog-centered" role="document">
@@ -23,6 +23,21 @@
   </div>
 </div>
 <style>
-  .modal-dialog--sizeguide img{width:100%}.open-sizeguide{color:#222;text-decoration:underline;display: block;text-transform: uppercase;font-size: 12px;font-weight: 600;text-decoration: none;}.open-sizeguide svg{margin-right:5px}.js-sizeguide-content td,.js-sizeguide-content th{border:1px solid rgba(0,0,0,.1)}@media (min-width:992px){.open-sizeguide{}}
+  .modal-dialog--sizeguide img{width:100%}
+  .open-sizeguide{
+    color: rgb(139, 139, 139);
+    display: block;
+    font-size: 14px;
+    font-weight: 400;
+    {% comment %} text-decoration: none; {% endcomment %}
+  }
+  a.open-sizeguide.hover{
+    text-decoration:underline;
+  }
+  .open-sizeguide svg{margin-right:5px}
+  .js-sizeguide-content td,.js-sizeguide-content th{border:1px solid rgba(0,0,0,.1)}
+  @media (min-width:992px){
+    .open-sizeguide{};
+  }
 </style>
 {%- endif -%}
