--- a/sections/product-template-1.liquid
+++ b/sections/product-template-1.liquid
@@ -73,9 +73,10 @@
   }
 
   .product-form__quantity-submit {
-    display: flex;
+    display: block;
     align-items: center;
     padding-top: 10px;
+    min-width: 300px;
   }
 
   .product-form__quantity-submit .product-form__item--submit {
@@ -96,6 +97,16 @@
     max-width: 50%;
   }
 
+  .product-form__item--quantity{
+    width: 56px;
+  }
+  
+  .cart-quanitty {
+    display: flex;
+    width: 100%;
+    height: 50px;
+    margin-bottom: 10px;
+  }
   @media (max-width:1100px) {
     #shopify-section-{{ section.id }} .product-single__info-wrapper{
       padding:0rem 0rem 0rem 0rem;
@@ -104,11 +115,7 @@
       display: block;
     }
     .product-form__item--quantity{
-      width: 130px;
       margin-bottom: 10px;
-    }
-    .product-form__quantity-submit .product-form__item--submit{
-      margin:0 0 10px 0 !important;
     }
     .product-form__buynow{
       margin:0;
@@ -266,6 +273,10 @@
           {% form 'product', product, class:form_class, id:form_id %}
           {% unless product.has_only_default_variant %}
           {% for option in product.options_with_values %}
+
+          {% if option.name == "Size" and product.metafields.custom.sizeguide.value %}
+            {% continue %}
+          {% endif %}
           <div class="selector-wrapper js product-form__item">
             <div class="d-flex justify-content-between">
               <label {% if option.name == 'default' %}class="label--hidden" {% endif %}for="SingleOptionSelector-{{ section.id }}-{{ forloop.index0 }}">{{ option.name }}</label>
@@ -298,24 +309,26 @@
           </span>
           {%- endif -%}
           <div class="product-form__quantity-submit pt-4">
-            <div class="product-form__item product-form__item--quantity">
-              <label class="hide" for="Quantity">{{ 'products.product.quantity' | t }}</label>
-              <input type="number" id="Quantity" name="quantity" value="1" min="1" class="product-form__input product-form__quantity">
-            </div>
-            <div class="product-form__item product-form__item--submit {% unless section.settings.enable_payment_button %} btn-disablebuynow {% endunless %}">
-              <button type="submit"
-                      name="add"
-                      id="AddToCart-{{ section.id }}"
-                      class="btn btn--full btn-theme product-form__cart-submit {% if section.settings.enable_payment_button %}product-form__cart-submit--outline{% endif %}{% unless current_variant.available %} btn--sold-out{% endunless %}"
-                      {% unless current_variant.available %}disabled="disabled"{% endunless %}>
-                <span id="AddToCartText-{{ section.id }}">
-                  {% unless current_variant.available %}
-                  {{ 'products.product.sold_out' | t }}
-                  {% else %}
-                  {{ 'products.product.add_to_cart' | t }}
-                  {% endunless %}
-                </span>
-              </button>
+            <div class="cart-quanitty">
+              <div class="product-form__item product-form__item--quantity">
+                <label class="hide" for="Quantity">{{ 'products.product.quantity' | t }}</label>
+                <input type="number" id="Quantity" name="quantity" value="1" min="1" class="product-form__input product-form__quantity">
+              </div>
+              <div class="product-form__item product-form__item--submit {% unless section.settings.enable_payment_button %} btn-disablebuynow {% endunless %}">
+                <button type="submit"
+                        name="add"
+                        id="AddToCart-{{ section.id }}"
+                        class="btn btn--full btn-theme product-form__cart-submit {% if section.settings.enable_payment_button %}product-form__cart-submit--outline{% endif %}{% unless current_variant.available %} btn--sold-out{% endunless %}"
+                        {% unless current_variant.available %}disabled="disabled"{% endunless %}>
+                  <span id="AddToCartText-{{ section.id }}">
+                    {% unless current_variant.available %}
+                    {{ 'products.product.sold_out' | t }}
+                    {% else %}
+                    {{ 'products.product.add_to_cart' | t }}
+                    {% endunless %}
+                  </span>
+                </button>
+              </div>
             </div>
             {% if section.settings.enable_payment_button %}
               <div class="product-form__buynow">
