--- a/snippets/product-information-vertical.liquid
+++ b/snippets/product-information-vertical.liquid
@@ -12,18 +12,18 @@
         </div>
       </div>
     </div>
-    {% if product.metafields.info.tab1 != blank %}
+    {% if product.metafields.custom.product_details != blank %}
     <div class="card">
       <div class="card-header">
-        {% if product.metafields.info.tab1 != blank %}
+        {% if product.metafields.custom.product_details != blank %}
         <a class="collapsed card-link" data-toggle="collapse" data-target="#collapseTwo"  href="#">
           {% include 'icon-arrow-right' %} {{section.settings.stab_title1}}
         </a>
         {% endif %}
       </div>
       <div id="collapseTwo" class="collapse" data-parent="#accordion">
-        <div class="card-body px-0">
-            {{product.metafields.info.tab1}}
+        <div class="card-body px-0 pl-4">
+            {{product.metafields.custom.product_details | metafield_tag}}
         </div>
       </div>
     </div>
