--- a/sections/product-template-5.liquid
+++ b/sections/product-template-5.liquid
@@ -628,7 +628,7 @@
 },
 {
 "type": "paragraph",
-"content": "💡 [Enter content of each tab here](\/admin\/bulk?resource_name=Product&edit=metafields.info.tab1,metafields.info.tab2,metafields.info.tab3,metafields.info.tab4)"
+"content": "💡 [Enter content of each tab here](\/admin\/bulk?resource_name=Product&edit=metafields.custom.product_details,metafields.custom.shipping_returns,metafields.info.tab3,metafields.info.tab4)"
 },
 {
 "type": "paragraph",
