--- a/snippets/product-information-vertical.liquid
+++ b/snippets/product-information-vertical.liquid
@@ -28,10 +28,10 @@
       </div>
     </div>
     {% endif %}
-    {% if product.metafields.info.tab2 != blank %}
+    {% if product.metafields.custom.shipping_returns != blank %}
     <div class="card">
       <div class="card-header">
-        {% if product.metafields.info.tab2 != blank %}
+        {% if product.metafields.custom.shipping_returns != blank %}
         <a class="collapsed card-link" data-toggle="collapse" data-target="#collapseTwo2"  href="#">
           {% include 'icon-arrow-right' %} {{section.settings.stab_title2}}
         </a>
@@ -39,7 +39,7 @@
       </div>
       <div id="collapseTwo2" class="collapse" data-parent="#accordion">
         <div class="card-body px-0">
-            {{product.metafields.info.tab2}}
+            {{product.metafields.custom.shipping_returns}}
         </div>
       </div>
     </div>
