--- a/snippets/product-information.liquid
+++ b/snippets/product-information.liquid
@@ -1,10 +1,10 @@
 <div id="nav-tab-info" class="pt-4">
   <div class="nav nav-tabs justify-content-md-center justify-content-start" role="tablist">
     <a class="nav-item nav-link active" href="#gtab1" data-toggle="tab" role="tab" aria-selected="true">{{section.settings.gtab_des | default:'Description'}}</a>
-    {% if product.metafields.info.tab1 != blank %}
+    {% if product.metafields.custom.product_details != blank %}
     <a class="nav-item nav-link" href="#stab1" data-toggle="tab" role="tab" aria-selected="false">{{section.settings.stab_title1}}</a>
     {% endif %}
-    {% if product.metafields.info.tab2 != blank %}
+    {% if product.metafields.custom.shipping_returns != blank %}
     <a class="nav-item nav-link" href="#stab2" data-toggle="tab" role="tab" aria-selected="false">{{section.settings.stab_title2}}</a>
     {% endif %}
     {% if product.metafields.info.tab3 != blank %}
@@ -26,14 +26,14 @@
     <div class="tab-pane fade show active" id="gtab1" role="tabpanel" >
       {{product.description}}
     </div>
-    {% if product.metafields.info.tab1 != blank %}
+    {% if product.metafields.custom.product_details != blank %}
     <div class="tab-pane fade" id="stab1" role="tabpanel">
-      {{product.metafields.info.tab1}}
+      {{product.metafields.custom.product_details}}
     </div>
     {% endif %}
-    {% if product.metafields.info.tab2 != blank %}
+    {% if product.metafields.custom.shipping_returns != blank %}
     <div class="tab-pane fade" id="stab2" role="tabpanel">
-      {{product.metafields.info.tab2}}
+      {{product.metafields.custom.shipping_returns}}
     </div>
     {% endif %}
     {% if product.metafields.info.tab3 != blank %}
