Fixed bugs in headr-#.liquid files and theme.css.liquid

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -1,5 +1,5 @@
 .grid {
-	*zoom: 1;
+	zoom: 1;
 }
 
 .grid:after {
@@ -1764,7 +1764,7 @@ textarea {
 }
 /*================ #Helper Classes ================*/
 .clearfix {
-	*zoom: 1;
+	zoom: 1;
 }
 
 .clearfix:after {
@@ -1906,7 +1906,7 @@ body, html {
 }
 
 .page-width {
-	*zoom: 1;
+	zoom: 1;
 	max-width: 1180px;
 	margin: 0 auto;
 	padding: 0 20px;
@@ -2914,7 +2914,7 @@ figcaption .bg-des:before {
 }
 /*================ Print Giftcard Styles ================*/
 @media print {
-    @	page {
+    @page {
 		margin: 0.5cm;
 	}
 
@@ -3194,7 +3194,7 @@ h6, .h6 {
 }
 /*================ RTE headings ================*/
 .rte {
-	*zoom: 1;
+	zoom: 1;
 	margin-bottom: var(--g-hgutter);
 }
 
@@ -3798,7 +3798,7 @@ select {
 }
 
 .errors {
-	background-color: #ec523e;
+	background-color: #ff1e0067;
 	color: #fff;
 }
 
