added automatic shopify chat and changed the size and position of scroll to top button

--- a/snippets/back-to-top.liquid
+++ b/snippets/back-to-top.liquid
@@ -1,4 +1,30 @@
 <style>
-  .js-back-to-top{position:fixed;z-index:1001;bottom:2vh;right:4vh;width:50px;height:50px;line-height:50px;text-align:center;cursor:pointer;display:block;border-radius:50%;background-color:#000}@media (max-width:767px){.js-back-to-top{display:none!important}}.js-back-to-top svg{fill:#fff;width:17px;}
+  .js-back-to-top{
+    position:fixed;
+    z-index:1001;
+    bottom:calc(58px + 32px);
+    right:22px;
+    width:60px;
+    height:60px;
+    line-height:50px;
+    text-align:center;
+    cursor:pointer;
+    display:block;
+    border-radius:50%;
+    background-color:#000}
+    @media (max-width:767px){.js-back-to-top{display:none!important}}
+    .js-back-to-top i{fill:#fff; rotate:270deg}
+  .js-back-to-top-container {
+    display:flex; align-items: center; justify-content: center; font-size: 17px; flex-direction: column;
+    height: 60px;
+  }
+  .top-text-box {
+    {% comment %} height:17px {% endcomment %}
+  }
 </style>
-<span class="js-back-to-top text-white transition" style="display:none">{%- include 'icon-arrow-up' -%}</span>
+<span class="js-back-to-top text-white transition" style="display:none">
+  <div class="js-back-to-top-container">
+    {% render 'icon-arrow-right'  %} 
+    <p class="top-text-box">Top</p>
+  </div>
+</span>
