--- a/snippets/back-to-top.liquid
+++ b/snippets/back-to-top.liquid
@@ -12,7 +12,7 @@
     display:block;
     border-radius:50%;
     background-color:#000}
-    @media (max-width:767px){.js-back-to-top{display:none!important}}
+    {% comment %} @media (max-width:767px){.js-back-to-top{display:none!important}} {% endcomment %}
     .js-back-to-top i{fill:#fff; rotate:270deg}
   .js-back-to-top-container {
     display:flex; align-items: center; justify-content: center; font-size: 17px; flex-direction: column;
