Fixed the tab for the links at the bottm and added a small print at the pop

--- a/assets/theme.css.liquid
+++ b/assets/theme.css.liquid
@@ -11018,3 +11018,7 @@ a.text-primary:hover, a.text-primary:focus, a.text-primary:active {
 	-webkit-text-stroke:1px currentColor;
     -webkit-text-fill-color: transparent;
 }
+
+ul.site-footer__list {
+    margin-left: 0;
+  }
